* Solved bug: taskboard not showing current user.

--- a/public/stylesheets/taskboard.css
+++ b/public/stylesheets/taskboard.css
@@ -223,7 +223,7 @@ table td{
 /* Nametags and Statustags Style */
 .add_nametag {
 	width: 88px;
-	height: 110px;
+	height: 106px;
 	text-align: center;
 }
 .nametag {
